--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.18.1",
+    "manifest": "^0.1.3",
     "mongoose": "^5.13.14",
     "morgan": "^1.9.1"
   },
